--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,6 @@ services:
     ports:
       - 27017:27017
     environment:
-      MONGODB_DATABASE: nest--pokemon
+      MONGODB_DATABASE: nest-pokemon
     volumes:
       - ./mongo:/data/db
